--- a/Cargo.toml
+++ b/Cargo.toml
@@ -289,7 +289,7 @@ highway = "1.1.0"
 hkdf = "0.12.4"
 http = "0.2.12"
 httptest = "0.15.5"
-hubtools = { git = "https://github.com/oxidecomputer/hubtools.git", branch = "main" }
+hubtools = { git = "https://github.com/oxidecomputer/hubtools.git", branch = "epoch" }
 humantime = "2.1.0"
 hyper = "0.14"
 hyper-rustls = "0.26.0"
