--- a/Cargo.toml
+++ b/Cargo.toml
@@ -307,7 +307,8 @@ chrono = { version = "0.4", features = [ "serde" ] }
 ciborium = "0.2.2"
 clap = { version = "4.5", features = ["cargo", "derive", "env", "wrap_help"] }
 clickhouse-admin-api = { path = "clickhouse-admin/api" }
-clickward = { git = "https://github.com/oxidecomputer/clickward", rev = "4ee0f74db55f440d589232256458c0750f6a641e" }
+#clickward = { git = "https://github.com/oxidecomputer/clickward", rev = "4ee0f74db55f440d589232256458c0750f6a641e" }
+clickward = { path = "../clickward" }
 cockroach-admin-api = { path = "cockroach-admin/api" }
 cockroach-admin-client = { path = "clients/cockroach-admin-client" }
 cockroach-admin-types = { path = "cockroach-admin/types" }
