Added functionality to ensure services are running
* Added the ability to ensure services are up and running by looping
  until they are ready. There are times a non-gimlet server may take
  a while to create and boot zones. If zone boot is to slow, services
  may timeout. This change adds logic to ensure that zone-networking
  and is online and will continue to reset services that fall into
  maintenance.

--- a/package-manifest.toml
+++ b/package-manifest.toml
@@ -74,7 +74,7 @@ output.type = "tarball"
 [package.overlay]
 service_name = "overlay"
 source.type = "composite"
-source.packages = ["logadm.tar.gz", "profile.tar.gz"]
+source.packages = ["logadm.tar.gz", "profile.tar.gz", "ipmgmt.tar.gz"]
 output.type = "zone"
 
 # The logadm package is an overlay for all non-global zones to reconfigure log
@@ -97,6 +97,15 @@ source.type = "local"
 source.paths = [
   { from = "smf/profile/profile", to = "/root/.profile" },
   { from = "smf/profile/bashrc", to = "/root/.bashrc" },
+]
+output.type = "zone"
+output.intermediate_only = true
+
+[package.ipmgmt]
+service_name = "ipmgmt"
+source.type = "local"
+source.paths = [
+  { from = "smf/ipmgmt/network-ipmgmt.xml", to = "/lib/svc/manifest/network/network-ipmgmt.xml" },
 ]
 output.type = "zone"
 output.intermediate_only = true
